# Leptospirosis_EWS

./: .gitignore  README.md  config.fiji.h3.yaml  config.fiji.yaml  config.sample.yaml  pyproject.toml  requirements-optional.txt  requirements.txt
data/fiji/: cases.csv  climate.csv  fiji_adm1_divisions_2d.gpkg  fiji_cases.csv  fiji_sanitation_placeholder.csv  flood_weekly.csv  sanitation.csv
data/fiji/fji_polbnda_adm1_district/: fji_polbnda_adm1_district.dbf  fji_polbnda_adm1_district.sbn  fji_polbnda_adm1_district.sbx  fji_polbnda_adm1_district.shp.xml  fji_polbnda_adm1_district.shx
data/fiji/gadm/gadm41_FJI_shp/: gadm41_FJI_1.dbf  gadm41_FJI_1.shp  (+4 more)
data/sample/: cases.csv  climate.csv  flood_weekly.csv  sanitation.csv  wards.gpkg
docs/: index.html
docs/outputs/fiji_run_h3/: predictions.parquet  predictions_thresholded.parquet  risk_latest_map.html  rolling_metrics.csv  run_metadata.json  run_metadata.sha256  tuning_trials.csv  ward_week_features.parquet
scripts/: make_clinical_report.py  make_gis_maps.py  make_results_report.py  prepare_chirps_climate_fiji.py  prepare_fiji_data.py  prepare_fiji_dataset.py  prepare_fiji_flood_weekly_from_rain.py  prepare_fiji_pop_density_from_worldpop.py  prepare_fiji_sanitation_template.py  smoke_test.py  verify_run_provenance.py
src/lepto_ews/: __init__.py  cli.py  config.py  features.py  io.py  pipeline.py  preprocessing.py  run_metadata.py
src/lepto_ews/explainability/: shap_utils.py
src/lepto_ews/gis/: mapping.py
src/lepto_ews/modeling/: calibration.py  metrics.py  tuning.py  validation.py  xgb_model.py
(+6 files in other folders)
