[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lepto-ews"
version = "0.1.0"
description = "Ward-level leptospirosis early warning system: climate+flood+sanitation → XGBoost → SHAP → GIS maps"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
